# QtSoftwarePatterns

./: .gitignore  CMakeLists.txt  QtSoftwarePatterns.pro  README.md  form.ui  main.cpp  mainwindow.cpp  mainwindow.h
commands/: shapecommand.cpp  shapecommand.h
dialogs/: windowmanager.cpp  windowmanager.h
shapes/: myshape.cpp  myshape.h  shapecreator.cpp  shapecreator.h  shapecreatormultiton.cpp  shapecreatormultiton.h
shapes/chain/: eventhandler.cpp  eventhandler.h  wheeleventhandler.cpp  wheeleventhandler.h  wheelshifteventhandler.cpp  wheelshifteventhandler.h
shapes/circles/: circle.cpp  circle.h  circlecreator.cpp  circlecreator.h
shapes/group/: group.cpp  group.h
shapes/groups/: group.cpp  group.h
shapes/rectangles/: rectangle.cpp  rectangle.h  rectanglecreator.cpp  rectanglecreator.h
shapes/triangles/: triangle.cpp  triangle.h  trianglecreator.cpp  trianglecreator.h
widgets/: shapebutton.cpp  shapebutton.h  shapeeditorwidget.cpp  shapeeditorwidget.h  shapemediatorwidget.cpp  shapemediatorwidget.h  shapescenewidget.cpp  shapescenewidget.h  shapeviewwidget.cpp  shapeviewwidget.h
